--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -13,7 +13,7 @@
     <string name="license">Licenza</string>
     <string name="privacy_policy">Informativa sulla privacy</string>
     <string name="license_setting_name">Licenza di BeauTyXT</string>
-    <string name="license_setting_description">Visualizza la licenza di BeauTyXT nell'app</string>
+    <string name="license_setting_description">Visualizza la licenza di BeauTyXT nell\'app</string>
     <string name="credits">Riconoscimenti</string>
     <string name="credits_setting_name">Riconoscimenti</string>
     <string name="credits_setting_description">Visualizza le licenze open source del codice che BeauTyXT utilizza nell\'app</string>
