Make the opening and creating file buttons DropdownMenu's.
Also add a DropdownMenu entry to open any file type.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="credits">Credits</string>
     <string name="credits_setting_name">Credits</string>
     <string name="credits_setting_description">View open source licenses of code that BeauTyXT uses in app</string>
+    <string name="any">any</string>
 </resources>
