--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">BeauTyXT</string>
     <string name="settings">Impostazioni</string>
     <string name="back_button">Indietro</string>
@@ -17,4 +17,17 @@
     <string name="credits">Riconoscimenti</string>
     <string name="credits_setting_name">Riconoscimenti</string>
     <string name="credits_setting_description">Visualizza le licenze open source del codice che BeauTyXT utilizza nell\'app</string>
+    <string name="any">Qualsiasi</string>
+    <string name="txt">Testo semplice (.txt &amp; .text)</string>
+    <string name="pitch_black_background_setting_name">Sfondo nero</string>
+    <string name="pitch_black_background_setting_description">Sostituisce lo sfondo con uno nero quando è attivo il tema scuro</string>
+    <string name="about">Informazioni</string>
+    <string name="theme">Tema</string>
+    <string name="file_info">Informazioni file</string>
+    <string name="name">Nome</string>
+    <string name="size">Dimensione</string>
+    <string name="mime_type">Tipologia</string>
+    <string name="bytes">Byte</string>
+    <string name="new_file">Nuovo file</string>
+    <string name="open_file">Apri file</string>
 </resources>
