--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -30,4 +30,6 @@
     <string name="bytes">Byte</string>
     <string name="new_file">Nuovo file</string>
     <string name="open_file">Apri file</string>
+    <string name="open_beautyxt_website_setting_name">Sito di BeauTyXT</string>
+    <string name="open_beautyxt_website_setting_description">Apri il sito di BeauTyXT nel browser</string>
 </resources>
