Don't crash when opening a read only file. Check if file is read only and disable TextField and show "Read Only" at the top bar instead of crashing.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="markdown" tools:ignore="MissingTranslation">Markdown</string>
     <string name="render_markdown_setting_description" tools:ignore="MissingTranslation">Render Markdown (.md) files on the bottom side of the screen</string>
     <string name="md" tools:ignore="MissingTranslation">Markdown (.md)</string>
+    <string name="read_only" tools:ignore="MissingTranslation">Read Only</string>
 </resources>
