Change "Rendered markdown" to "Rendered Markdown" and change it to a string resource.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="render_markdown_setting_description" tools:ignore="MissingTranslation">Render Markdown (.md) files on the bottom side of the screen</string>
     <string name="md" tools:ignore="MissingTranslation">Markdown (.md)</string>
     <string name="read_only" tools:ignore="MissingTranslation">Read Only</string>
+    <string name="rendered_markdown" tools:ignore="MissingTranslation">Rendered Markdown</string>
 </resources>
