--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,8 @@
     <string name="md" tools:ignore="MissingTranslation">Markdown (.md)</string>
     <string name="read_only" tools:ignore="MissingTranslation">Read Only</string>
     <string name="rendered_markdown" tools:ignore="MissingTranslation">Rendered Markdown</string>
+    <string name="preview_markdown_rendered_to_html" tools:ignore="MissingTranslation">Preview Markdown rendered to HTML</string>
+    <string name="experimental_features" tools:ignore="MissingTranslation">Experimental Features</string>
+    <string name="fullscreen_markdown_render_preview_setting_name" tools:ignore="MissingTranslation">Fullscreen Markdown Render Preview</string>
+    <string name="fullscreen_markdown_render_preview_setting_description" tools:ignore="MissingTranslation">Shows a button when a markdown file is open which will toggle a fullscreen view of the rendered markdown preview.\nExperimental because it currently disappears when rotating.</string>
 </resources>
