--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,5 @@
     <string name="preview_markdown_rendered_to_html" tools:ignore="MissingTranslation">Preview Markdown rendered to HTML</string>
     <string name="experimental_features" tools:ignore="MissingTranslation">Experimental Features</string>
     <string name="fullscreen_markdown_render_preview_setting_name" tools:ignore="MissingTranslation">Fullscreen Markdown Render Preview</string>
-    <string name="fullscreen_markdown_render_preview_setting_description" tools:ignore="MissingTranslation">Shows a button when a markdown file is open which will toggle a fullscreen view of the rendered markdown preview.\nExperimental because it currently disappears when rotating.</string>
+    <string name="fullscreen_markdown_render_preview_setting_description" tools:ignore="MissingTranslation">Shows a button when a markdown file is open which will toggle a fullscreen view of the rendered markdown preview.\nExperimental because it has a few issues.</string>
 </resources>
