--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="experimental_features" tools:ignore="MissingTranslation">Experimental Features</string>
     <string name="fullscreen_markdown_render_preview_setting_name" tools:ignore="MissingTranslation">Fullscreen Markdown Render Preview</string>
     <string name="fullscreen_markdown_render_preview_setting_description" tools:ignore="MissingTranslation">Shows a button when a markdown file is open which will toggle a fullscreen view of the rendered markdown preview.\nExperimental because it has a few issues.</string>
+    <string name="open_any_file_type_setting_name" tools:ignore="MissingTranslation">Open Any File Type</string>
+    <string name="open_any_file_type_setting_description" tools:ignore="MissingTranslation">Shows Any file type option in the open an existing file dialog.\nWARNING PLEASE READ OR RISK LOSING DATA: This option currently corrupts some file types upon opening such as but not limited to pdf\'s, odt\'s, and probably others.</string>
 </resources>
