--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,7 @@
     <string name="continue_to_app" translatable="false">Continue</string>
     <string name="options_dropdown_menu" tools:ignore="MissingTranslation">Options dropdown menu</string>
     <string name="render_markdown_setting_name" tools:ignore="MissingTranslation">Render Markdown</string>
-    <string name="markdown" tools:ignore="MissingTranslation">Markdown</string>
-    <string name="render_markdown_setting_description" tools:ignore="MissingTranslation">Render Markdown (.md) files on the bottom side of the screen</string>
+    <string name="render_markdown_setting_description" tools:ignore="MissingTranslation">Render %1$s files on the bottom side of the screen</string>
     <string name="md" tools:ignore="MissingTranslation">Markdown (.md &amp; .markdown)</string>
     <string name="export" tools:ignore="MissingTranslation">Export</string>
     <string name="save_as" tools:ignore="MissingTranslation">Save As</string>
@@ -60,8 +59,8 @@
     <string name="docx" tools:ignore="MissingTranslation">Office Open XML (.docx)</string>
     <string name="export_markdown_to_docx_setting_name" tools:ignore="MissingTranslation">Export %1$s to %2$s</string>
     <string name="export_markdown_to_docx_setting_description" tools:ignore="MissingTranslation">Adds an export
-        option for Markdown (.md) files to export to Office Open XML (.docx).\nNot all Markdown is supported for
-        conversion yet, BeauTyXT will crash when trying to export a Markdown (.md) file using unsupported
+        option for %1$s files to export to %2$s.\nNot all Markdown is supported for
+        conversion yet, BeauTyXT will crash when trying to export a %1$s file using unsupported
         functionality.\nCurrently only Heading, Break, Emphasis, Strong, and alignment with &lt;div style="text-align:
         center"&gt;text here&lt;/div&gt; (center, left, right) are supported.</string>
     <string name="print" tools:ignore="MissingTranslation">Print</string>
