Implement file deletion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,7 @@
     <string name="right_margin" tools:ignore="MissingTranslation">Right Margin</string>
     <string name="top_margin" tools:ignore="MissingTranslation">Top Margin</string>
     <string name="bottom_margin" tools:ignore="MissingTranslation">Bottom Margin</string>
+    <string name="delete_file" tools:ignore="MissingTranslation">Delete File</string>
+    <string name="delete_file_dialog_text" tools:ignore="MissingTranslation">Are you really sure you want to do
+        this?\nDeleted files are irrecoverable (gone forever!)</string>
 </resources>
