--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="delete_file_dialog_text" tools:ignore="MissingTranslation">Are you really sure you want to do
         this?\nDeleted files are irrecoverable (gone forever!)</string>
     <string name="share" tools:ignore="MissingTranslation">Share</string>
+    <string name="share_as" tools:ignore="MissingTranslation">Share As</string>
 </resources>
