Partial test Typst support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
         this?\nDeleted files are irrecoverable (gone forever!)</string>
     <string name="share" tools:ignore="MissingTranslation">Share</string>
     <string name="share_as" tools:ignore="MissingTranslation">Share As</string>
+    <string name="typst_project">Typst Project</string>
 </resources>
