--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,8 +88,8 @@
     <string name="create_and_edit_another_file_in_the_typst_project" tools:ignore="MissingTranslation">Create and edit another file in the Typst project</string>
     <string name="typst_project_show_warnings_and_errors_setting_name" tools:ignore="MissingTranslation">Show warnings and errors</string>
     <string name="typst_project_show_warnings_and_errors_setting_description" tools:ignore="MissingTranslation">Show warnings and errors below the %1$s preview</string>
-    <string name="auto_preview_on_typing_setting_name" tools:ignore="MissingTranslation">Auto update the preview on typing</string>
-    <string name="auto_preview_on_typing_setting_description" tools:ignore="MissingTranslation">Refresh the render after each character input (slow for big documents), otherwise you will need to refresh manually</string>
+    <string name="typst_project_auto_preview_setting_name" tools:ignore="MissingTranslation">Auto update the preview</string>
+    <string name="typst_project_auto_preview_setting_description" tools:ignore="MissingTranslation">Refresh the render on typing any character and on project loading (slow for big documents), otherwise you will need to refresh manually</string>
     <string name="rendered_typst_project_preview" tools:ignore="MissingTranslation">Rendered Typst project preview</string>
     <string name="toggle_previewing_typst_project_in_fullscreen" tools:ignore="MissingTranslation">Toggle previewing Typst project in fullscreen</string>
     <string name="fullscreen_typst_preview_button_setting_name" tools:ignore="MissingTranslation">Fullscreen Typst Preview Button</string>
@@ -100,5 +100,5 @@
     <string name="view_credits_for_rust_library_for_plain_text_and_markdown_support" tools:ignore="MissingTranslation">View Credits for Rust library for Plain Text and Markdown support</string>
     <string name="view_credits_for_rust_library_for_typst_support" tools:ignore="MissingTranslation">View Credits for Rust library for Typst support</string>
     <string name="typst_rust_library_credits" translatable="false">Typst Rust Library Credits</string>
-    <string name="refresh">Refresh</string>
+    <string name="refresh" tools:ignore="MissingTranslation">Refresh</string>
 </resources>
